# libtorch_dataloader

./: CMakeLists.txt  README.md  main.cpp
